[package]
authors = ["Richard Barnes <rlb@ipv.sx>"]
edition = "2018"
readme = "README.md"
name = "mithras"
version = "0.1.0"

[build-dependencies]
cc = "1.0.46"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32l4xx-hal = {version = "0.5.0", features = ["stm32l4x2", "rt"]}

panic-semihosting = "0.5"
usb-device = "0.2.1"
usbd-serial = "0.1"
stm32-usbd = { version = "0.4.0", features = ["stm32l4x2xx"] }

[[bin]]
name = "mithras"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
